contrast correction

--- a/week02/styles/indexstyles.css
+++ b/week02/styles/indexstyles.css
@@ -12,17 +12,17 @@ nav a{
     color: white;
 }
 nav{
-    background-color:steelblue;
+    background-color:rgb(12, 48, 78);
     padding: 1rem;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 main h1{
-    border-bottom:1px solid steelblue;
+    border-bottom:1px solid rgb(12, 48, 78);
     padding-bottom: 2px;
     margin-bottom: 2px;
-    color: steelblue;
+    color: rgb(12, 48, 78);
 
 }
 main img{
@@ -34,6 +34,7 @@ main img{
 }
 .box a{
     text-decoration: none;
+    color: rgb(12, 48, 78);
 }
 aside{
     width: 20rem;
