--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -22,8 +22,8 @@ h1,h2,h3,h4,h5,h6 {
     color: white;
 }
 header{
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     background-color:  #0077B6;
 }
 header img{
@@ -91,8 +91,8 @@ h1,h2{
     background-color: #CFD2CD;
 }
 .figureflex{
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     padding: 0%;
     margin: 0%;
 }
